# robot_bringup

./: CMakeLists.txt  package.xml
config/prompts/: detection_system_prompt.txt  reasoning_system_prompt.txt
config/ros1/: airy.yaml  airy_offline.yaml  battery_checker_params.yaml  blackfly.yaml  bridge_robot.yaml  bridge_uav.yaml  bridge_uav_unipilot.yaml  bridge_ugv.yaml  cam_front.yaml  detection_vlm.yaml  detection_yoloe.yaml  mimosa.yaml  msf_mimosa.yaml  os0_64_512x10.json  os_dummy.json  pointcloud2_on_demand.yaml  px4_config.yaml  px4_pluginlists.yaml  radar.cfg  radar_10mps.cfg  radar_4mps.cfg  reasoning_vlm.yaml  rovio.info  unilidar_l2.yaml  vn100.yaml
config/ros1/bt_xml/: homing.xml  inspection.xml  le.xml  le_insp_opening.xml  le_opening.xml  lge.xml  lge_homing.xml  lge_insp.xml  main_tree.xml  opening_passing.xml  treenodes.xml
config/ros2/: cbf_pc_selector_sim_lidar.yaml  cbf_sim.yaml  sim_lidar.yaml
launch/ros1/: bag_rec.launch  bridge_params_robot.launch  bridge_params_uav.launch  bridge_params_uav_unipilot.launch  bridge_params_ugv.launch  cpu_monitor.launch  gbplanner_robot.launch  gbplanner_sim.launch  gbplanner_uav_rl_sim.launch  gbplanner_uav_sim.launch  gbplanner_ugv_sim.launch  mimosa.launch  msf_mimosa.launch  sensors.launch  simcore.launch
launch/ros2/: cbf_pc_selector_sim.launch.py  cbf_sim.launch.py  nmpc_full.launch.py  uav_sim.launch.xml  uav_sim_unipilot.launch.xml  uav_topics.launch.xml  ugv_sim.launch.xml  ugv_topics.launch.xml
rviz/ros1/: rmf.rviz  rmf_unipilot.rviz  smb_arl.rviz
scripts/ros2/: pc_sparsify.py
(+22 files in other folders)
